A React + Vite project of NIKE Clone

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Favicon -->
     <link rel="icon" href="https://www.nike.com/favicon.ico?v=1" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Nike</title>
   </head>
   <body>
     <div id="root"></div>
